Local cache refactoring.